<resources>
    <string name="app_name">Hoard_And_Store</string>
    <string name="details_placeholder">Details</string>
    <string name="date_of_purchase_placeholder">Date Of Purchase: %1$s</string>
    <string name="description_placeholder">Description: %1$s</string>
    <string name="make_placeholder">Make: %1$s</string>
    <string name="model_placeholder">Model: %1$s</string>
    <string name="serial_number_placeholder">Serial Number: %1$s</string>
    <string name="estimated_value_placeholder">Estimated value: %.2f</string>
    <string name="comment_placeholder">Comment: %1$s</string>
    <string name="tags">Tags</string>
    <string name="edit_text">EDIT</string>
    <string name="close_text">X</string>
    <string name="cancel_text">CANCEL</string>
    <string name="content_des_item">Image of the Item</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="arrow_description">arrow to open details of an item</string>
    <string name="text_label">Item Deleted</string>
    <string name="sort_method_name">Sort by Name</string>
    <string name="close_selection_mode">Close selection mode</string>
    <string name="tag_name_placeholder">Tag Name</string>
    <string name="submit_button_text">SUBMIT</string>
    <string name="create_new_tag_placeholder">Create New Tag</string>
    <string name="apply_tags_placeholder">Apply Tags</string>
    <string name="username_length_error">Username too long (less than 15 characters)</string>
    <string name="email_and_or_password_incorrect">Email and/or password incorrect</string>
    <string name="password_match_and_length_error">Make sure password matches and is greater than 6 characters</string>

</resources>