<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Header -->
    <TextView
        android:id="@+id/detailsHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/details_placeholder"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Close Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Image Placeholder -->
    <ImageView
        android:id="@+id/itemImage"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        android:background="@color/grey"
        android:contentDescription="@string/content_des_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsHeader" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/detailsCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemImage">

        <LinearLayout
            android:id="@+id/detailsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Date -->
            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/calendar_month"
                android:drawablePadding="8dp"
                android:text="@string/date_of_purchase_placeholder" />

            <!-- Description -->
            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/info"
                android:drawablePadding="8dp"
                android:text="@string/description_placeholder" />

            <!-- Make -->
            <TextView
                android:id="@+id/makeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/make"
                android:drawablePadding="8dp"
                android:text="@string/make_placeholder" />

            <!-- Model -->
            <TextView
                android:id="@+id/modelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/model"
                android:drawablePadding="8dp"
                android:text="@string/model_placeholder" />

            <!-- Serial Number -->
            <TextView
                android:id="@+id/serialNumberTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/barcode"
                android:drawablePadding="8dp"
                android:text="@string/serial_number_placeholder" />

            <!-- Value -->
            <TextView
                android:id="@+id/valueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/value"
                android:drawablePadding="8dp"
                android:text="@string/estimated_value_placeholder" />

            <!-- Comment -->
            <TextView
                android:id="@+id/commentTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/comment"
                android:drawablePadding="8dp"
                android:text="@string/comment_placeholder" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <!-- Tags Section -->
    <TextView
        android:id="@+id/tagTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/tag"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/tags"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsCardView" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/tagCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tagTextView"
        app:strokeWidth="2dp">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <!-- add tags through code -->

        </com.google.android.material.chip.ChipGroup>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tagCardView" />

</androidx.constraintlayout.widget.ConstraintLayout>
