<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center_vertical">

        <!-- Image placeholder -->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/grey"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/content_des_item"
            app:shapeAppearanceOverlay="@style/CircularShapeAppearance"
            />


        <!-- Vertical LinearLayout for text components -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/commentTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/comment"
                android:text="@string/comment_placeholder"
                android:textSize="18sp"
                android:drawablePadding="8dp"
                android:fontFamily="sans-serif-medium"/>



            <!-- Horizontal LinearLayout for Make and Model -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Make TextView -->
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/makeTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/make_placeholder"
                    android:drawableLeft="@drawable/make"
                    android:textSize="18sp"
                    android:drawablePadding="8dp"
                    android:fontFamily="sans-serif-medium"/>

                <!-- Model TextView -->
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/modelTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/model_placeholder"
                    android:drawableLeft="@drawable/model"
                    android:textSize="18sp"
                    android:drawablePadding="8dp"
                    android:fontFamily="sans-serif-medium"/>
            </LinearLayout>

            <!-- Horizontal LinearLayout for Date and Price -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Date TextView -->
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/dateOfAcquisitionList"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/calendar_month"
                    android:text="@string/date_of_purchase_placeholder"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"/>

                <!-- Price TextView (Placeholder, replace with actual price TextView) -->
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/estimatedValueList"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/value"
                    android:text="@string/estimated_value_placeholder"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
